# aiida-graphql

./: .flaskenv  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml
aiida_graphql/: app.py  schema.py
aiida_graphql/api/: computer.py  node.py  user.py
