[tool.poetry]
name = "aiida-graphql"
version = "0.0.2"
description = "Strawberry-based GraphQL API Server for AiiDA"
authors = ["Tiziano Müller <tiziano.mueller@chem.uzh.ch>"]
repository = "https://github.com/dev-zero/aiida-graphql"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiida = "^1.0.0b6"
strawberry-graphql = "^0.16.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
codecov = "^2.0.15"
pytest-cov = "^2.7.1"

[tool.black]
line-length = 132
target_version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
